--- a/src/option.scss
+++ b/src/option.scss
@@ -1,12 +1,14 @@
-@import  '~roi-styles-common/src/basic_variables';
+@import  '_variables';
 // add dependency of 3rd party css here
 @import 'main';
 
-%list-item__img {
-    width: 300px;
-    height: 300px;
-    border: 1px solid red;
-}
-%list-item__title{
-    text-transform: lowercase;
-}
+
+@include list__option(){
+    // %list-item__title{
+    //     &::after, &::before{
+    //         content: '-';
+    //     }
+    //     text-transform: lowercase;
+    //     text-align: center;
+    // }
+};
