--- a/src/default.scss
+++ b/src/default.scss
@@ -3,7 +3,7 @@
 @import 'main';
 
 @include list__default(){
-    %list-item__title{
-        color: #ccc;
-    }
+    // %list-item__title{
+    //     color: #ccc;
+    // }
 };
