change file structure

--- a/src/project_alternate/project_alternate.scss
+++ b/src/project_alternate/project_alternate.scss
@@ -1,6 +1,6 @@
-@import  'variables';
+@import  'project-vars';
 // add dependency of 3rd party css here
-@import 'main';
+@import '../dynamic/modules/list/layouts';
 
 @include list__alternate(){
     %list-item__title{
