--- a/src/project_option/project_option.scss
+++ b/src/project_option/project_option.scss
@@ -1,7 +1,6 @@
-@import  '_variables';
+@import  'project-vars';
 // add dependency of 3rd party css here
-@import 'main';
-
+@import '../dynamic/modules/list/layouts';
 
 @include list__option(){
 
