--- a/src/dynamic/modules/list/themes/_list--alternate.scss
+++ b/src/dynamic/modules/list/themes/_list--alternate.scss
@@ -1,8 +1,9 @@
 @mixin list__alternate(
     $img--width: 100%,
     $img--height: 7rem,
-    $button-text: #f2f2f2,
-    $button-color: rgb(49, 135, 129)){
+    $button-text: $light-backup,
+    $button-color: $corporate-color,
+    $img-round: $roundfactor){
     %list {
         list-style: none;
         display: flex;
@@ -21,6 +22,7 @@
                 position: relative;
                 top: 4.5rem;
                 color: $button-text;
+                text-shadow: 3px 3px 3px $almost-dark-color;
             }
             &__img {
                 display: none;
@@ -31,7 +33,7 @@
                     background-size: cover;
                     background-position: center;
                     background-repeat: no-repeat;
-                    border-radius: 50%;
+                    border-radius: $img-round;
                     border: 0;
                 }
             }
