--- a/src/project_option/project_option.scss
+++ b/src/project_option/project_option.scss
@@ -1,4 +1,4 @@
-@import  'project-vars';
+@import  './project_option-vars';
 // add dependency of 3rd party css here
 @import '../dynamic/modules/list/layouts';
 
