--- a/src/dynamic/libs/_default_vars.scss
+++ b/src/dynamic/libs/_default_vars.scss
@@ -22,19 +22,30 @@ $padding-base: 30px !default;
 $tablet: lg !default;
 $tabletv: md !default;
 
-// colors --------------------------------------------------------- 
+// Colors ---------------------------------------------------------
 
-$base_01: #555555 !default;
-$base_02: #999999 !default;
-$base_03: #F9F9F9 !default;
-$second_01: #8F644B !default;
+$light-color : #fff !default;
+$light-backup: darken($light-color, 2.6%) !default;
+$practically-light-color: darken($light-color, 10%) !default;
+$almost-light-color: darken($light-color, 20%) !default;
+$nearly-light-color: darken($light-color, 30%) !default;
+$mid-light-color: darken($light-color, 40%) !default;
+$mid-color: darken($light-color, 50%) !default;
+$mid-dark-color: darken($light-color, 60%) !default;
+$nearly-dark-color: darken($light-color, 70%) !default;
+$almost-dark-color: darken($light-color, 80%) !default;
+$practically-dark-color: darken($light-color, 90%) !default;
+$dark-color: darken($light-color, 100%) !default;
 
-//form states
+$main-color: #FFA300 !default;
+$custom-color: #84B044 !default;
+$corporate-color: #081f2c !default;
+$interaction-color: rgb(131, 203, 196) !default;
+$interaction-color-alpha: rgba(131, 203, 196, .5) !default;
 
-$form_ok: #B2B717 !default;
-$form_error: #FFB20C !default;
-$form_required: #AD1F00 !default;
-
+$success-color: #35a838 !default;
+$error-color: #cc3d33 !default;
+$warning-color: #FFEE58 !default;
 
 // fonts --------------------------------------------------------- 
 
@@ -65,6 +76,40 @@ $fontsize_base:62.5%;
 $visible_items:9 !default;
 
 
-//Popup footer
-$size-popup-title-left: 3.8rem;
-$size-popup-fringe-title: 3.2rem;
+// z-index ---------------------------------------------------------
+
+$z_bottom: -1 !default;
+$z_base: 0 !default;
+$z_baseup: 100 !default;
+$z_mediumdown: 499 !default;
+$z_medium: 500 !default;
+$z_mediumup: 501 !default;
+$z_superior: 1000 !default;
+$zz_top: 1200 !default;
+$zz_modal: 9999;
+
+$padding-vertical-s : .5rem;
+$padding-horizontal-s: 1rem;
+
+$padding-vertical-b : .7rem;
+$padding-horizontal-b: 1.4rem;
+
+$padding-vertical-l : 1rem;
+$padding-horizontal-l: 2rem;
+
+$padding-vertical-xl : 1.5rem;
+$padding-horizontal-xl: 3rem;
+
+$padding-vertical-xxl : 2rem;
+$padding-horizontal-xxl: 4rem;
+
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,400i,700');
+
+$fontsetbase: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$fontsize_base: 62.5% !default;
+$fontsize_m: 81.3% !default;
+$fontsize_l: 100% !default;
+$fontsize_xl: 125% !default;
+$line-height-base: 1.3;
+
+$roundfactor: 2.5rem !default;
