--- a/src/project_alternate/project_alternate.scss
+++ b/src/project_alternate/project_alternate.scss
@@ -1,16 +1,17 @@
-@import  'project-vars';
+@import  './project_alternate-vars';
 // add dependency of 3rd party css here
 @import '../dynamic/modules/list/layouts';
 
-@include list__alternate(){
+@include list__alternate($img-round: 20rem){
     %list-item__title{
-        &::after, &::before{
-            content: '-';
-        }
+        text-decoration: underline;
     }
     &.list--offers{
         %list-item__title{
-           color: #ff0000;
+            color: $main-color;
+            &::after, &::before{
+            content: '-';
+            }
         }
     }
     &.list--news{
@@ -18,8 +19,13 @@
             background: #ccc;
             &__title{
                 text-transform: uppercase;
-                color: blue;
+                color: $corporate-color;
             }
+            &__img{
+                &-fix {
+                    border-radius: 0;
+                }
+             }
         }
     }
 };
