--- a/src/project_default.scss
+++ b/src/project_default.scss
@@ -1,8 +1,14 @@
 // add dependency of 3rd party css here
 @import './dynamic/modules/list/layouts';
-
-@include list__default(){
-    %list-item__title{
-        color: #ccc;
-    }
+//$title-color: #ccc
+@include list__default() {
+    // &{
+    //     list-style: none;
+    // }
+    // &.list--news{
+    //     display: flex;
+    // }
+    // %list-item__title{
+    //     color: #ccc;
+    // }
 };
