docs(readme): readme first commit

--- a/src/dynamic/modules/list/_layouts.scss
+++ b/src/dynamic/modules/list/_layouts.scss
@@ -12,7 +12,8 @@
 //             &__description{}
 //             &__content{}
 //             &__button{}
-//         }
+//             &__action{}
+//          } 
 //     }
 // }
 
