--- a/src/dynamic/modules/list/themes/_list--alternate.scss
+++ b/src/dynamic/modules/list/themes/_list--alternate.scss
@@ -1,55 +1,65 @@
 
-@mixin list__alternate(
+@mixin list__alternate (
     $img--width: 100%,
     $img--height: 7rem,
     $button-text: $light-backup,
     $button-color: $corporate-color,
-    $img-round: $roundfactor){
+    $img-round: $roundfactor
+    ){
     %list {
-        list-style: none;
+
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        text-align: center;
         justify-content: space-around;
-        &-item{
+        list-style: none;
+        text-align: center;
+
+        &-item {
             align-self: center;
 
-            &__title{
+            &__title {
                 align-self: center;
             }
-            &__sub-title{
+
+            &__sub-title {
+                color: $button-text;
                 font-size: .7rem;
                 position: relative;
-                top: 4.5rem;
-                color: $button-text;
                 text-shadow: 3px 3px 3px $almost-dark-color;
+                top: 4.5rem;
             }
+
             &__img {
+
                 display: none;
+
                 &-fix {
-                    width: $img--width;
-                    height: $img--height;
-                    background-position: 50% 50%;
-                    background-size: cover;
-                    background-position: center;
-                    background-repeat: no-repeat;
-                    border-radius: $img-round;
+                    @extend %background-cover;
                     border: 0;
+                    border-radius: $img-round;
+                    height: $img--height;
+                    width: $img--width;
                 }
             }
-            &__description{
+
+            &__description {
                 align-self: center;
             }
-            &__action{
+
+            &__action {
                 align-self: center;
-                text-transform: lowercase;
-                font-size: 1.2rem;
-                width: 100%;
-                height: 3rem;
-                border: none;
                 background: $button-color;
+                border: 0;
                 color: $button-text;
+                font-size: 1.2rem;
+                height: 3rem;
+                text-transform: lowercase;
+                width: 100%;
+            }
+
+            &__span {
+                display: none;
             }
         }
         @content;
