--- a/src/project_alternate/project_alternate.scss
+++ b/src/project_alternate/project_alternate.scss
@@ -2,30 +2,47 @@
 // add dependency of 3rd party css here
 @import '../dynamic/modules/list/layouts';
 
-@include list__alternate($img-round: 20rem){
-    %list-item__title{
+@include list__alternate(
+    $img-round: 20rem
+    ){
+
+    %list-item__title {
         text-decoration: underline;
     }
-    &.list--offers{
-        %list-item__title{
+
+    &.list--offers {
+
+        %list-item__title {
             color: $main-color;
-            &::after, &::before{
-            content: '-';
+
+            &::after,
+            &::before {
+                content: '-';
             }
+
         }
+
     }
-    &.list--news{
-        %list-item{
-            background: #ccc;
-            &__title{
-                text-transform: uppercase;
+
+    &.list--news {
+
+        %list-item {
+            background: $custom-color;
+
+            &__title {
                 color: $corporate-color;
+                text-transform: uppercase;
             }
-            &__img{
+
+            &__img {
+
                 &-fix {
                     border-radius: 0;
                 }
+
             }
+
         }
+
     }
 };
