--- a/src/project_default.scss
+++ b/src/project_default.scss
@@ -1,14 +1,20 @@
 // add dependency of 3rd party css here
 @import './dynamic/modules/list/layouts';
 //$title-color: #ccc
-@include list__default() {
-    &{
+@include list__default {
+    & {
         list-style: none;
     }
-    &.list--news{
+
+    &.list--news {
         display: flex;
     }
-    %list-item__title{
-        color: #ccc;
+
+    %list-item__title {
+        color: $almost-light-color;
     }
+
+    // & {
+    //     display: none;
+    // }
 };
