--- a/src/project_option/project_option.scss
+++ b/src/project_option/project_option.scss
@@ -2,6 +2,4 @@
 // add dependency of 3rd party css here
 @import '../dynamic/modules/list/layouts';
 
-@include list__option(){
-
-};
+@include list__option;
