--- a/src/project_default/project_default.scss
+++ b/src/project_default/project_default.scss
@@ -1,5 +1,5 @@
 // add dependency of 3rd party css here
-@import './dynamic/modules/list/layouts';
+@import '../dynamic_templates/modules/list/layouts';
 //$title-color: #ccc
 @include list__default {
     & {
