--- a/src/dynamic_templates/modules/list/_layouts.scss
+++ b/src/dynamic_templates/modules/list/_layouts.scss
@@ -3,26 +3,26 @@
 @import '../../libs/overs';
 @import '../../libs/common';
 
-/*
-@mixin list__template(){
-    %list{
-        &-item{
-            &--hover{}
-            &__title{}
-            &__sub-title{}
-            &__content{}
-            &__description{}
-            &__img {
-                &-fix{}
-            }
-            &__action{}
-            &__label{}
-            &__span{}
-        }
-    @content;
-    }
-}
-*/
+
+// @mixin list__template(){
+//     %list{
+//         &-item{
+//             &--hover{}
+//             &__title{}
+//             &__sub-title{}
+//             &__content{}
+//             &__description{}
+//             &__img {
+//                 &-fix{}
+//             }
+//             &__action{}
+//             &__label{}
+//             &__span{}
+//         }
+//     @content;
+//     }
+// }
+
 @import 'themes/list--default';
 @import 'themes/list--option';
 @import 'themes/list--alternate';
