--- a/src/project_alternate/project_alternate.scss
+++ b/src/project_alternate/project_alternate.scss
@@ -1,10 +1,10 @@
-@import  './project_alternate-vars';
+@import './project_alternate-vars';
 // add dependency of 3rd party css here
 @import '../dynamic_templates/modules/list/layouts';
 
 @include list__alternate(
     $img-round: 20rem
-    ){
+) {
 
     %list-item__title {
         text-decoration: underline;
@@ -19,9 +19,7 @@
             &::before {
                 content: '-';
             }
-
         }
-
     }
 
     &.list--news {
@@ -35,14 +33,10 @@
             }
 
             &__img {
-
                 &-fix {
                     border-radius: 0;
                 }
-
             }
-
         }
-
     }
-};
+}
