--- a/src/dynamic_templates/libs/_default_vars.scss
+++ b/src/dynamic_templates/libs/_default_vars.scss
@@ -44,8 +44,9 @@ $error-color: #cc3d33 !default;
 $warning-color: #ffee58 !default;
 
 // fonts ---------------------------------------------------------
+/* stylelint-disable value-keyword-case */
 
-$fontsetbase: lato, 'Helvetica Neue', helvetica, arial, sans-serif !default;
+$fontsetbase: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 $fontsize_base: 62.5% !default;
 $fontsize_m: 81.3% !default;
 $fontsize_l: 100% !default;
@@ -53,23 +54,25 @@ $fontsize_xl: 125% !default;
 $line-height-base: 1.3;
 
 $icons_base: icons_base !default;
-$font1: helvetica !default;
-$font2: helvetica !default;
-$font3: helvetica !default;
-$font4: helvetica !default;
-$font5: helvetica !default;
-$font6: helvetica !default;
+$font1: Helvetica !default;
+$font2: Helvetica !default;
+$font3: Helvetica !default;
+$font4: Helvetica !default;
+$font5: Helvetica !default;
+$font6: Helvetica !default;
 $icons: icons !default;
 
 $font-face: $font1, $font2, $font3, $font4, $font5, $font6, $icons, $icons_base;
 
 $fontsetbase: $font1, sans-serif !default;
-$fontset01: $font1, arial, sans-serif !default;
-$fontset02: $font2, arial, sans-serif !default;
-$fontset03: $font3, arial, sans-serif !default;
-$fontset04: $font4, arial, sans-serif !default;
-$fontset05: $font5, arial, sans-serif !default;
-$fontset06: $font6, arial, sans-serif !default;
+$fontset01: $font1, Arial, sans-serif !default;
+$fontset02: $font2, Arial, sans-serif !default;
+$fontset03: $font3, Arial, sans-serif !default;
+$fontset04: $font4, Arial, sans-serif !default;
+$fontset05: $font5, Arial, sans-serif !default;
+$fontset06: $font6, Arial, sans-serif !default;
+
+/* stylelint-enable value-keyword-case */
 
 // items menu ---------------------------------------------------------
 
