--- a/src/dynamic_templates/modules/list/_layouts.scss
+++ b/src/dynamic_templates/modules/list/_layouts.scss
@@ -11,12 +11,11 @@
 //             &__sub-title{}
 //             &__content{}
 //             &__description{}
-//             &__img {
-//                 &-fix{}
-//             }
+//             &__img {}
+//             &__imgFix{}
 //             &__action{}
 //             &__label{}
-//             &__span{}
+//             &__extra{}
 //         }
 //     @content;
 //     }
